# blog.quent.in

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Gemfile  Makefile  README.md  _config.yml  conductor.json  mise.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  compress-images.yml  hugo.yml
assets/css/: custom.css
config/_default/: hugo.yaml  menus.yaml  params.yaml
content/posts/: 2011-08-01-pssh-parralelisons-au-maximum.md  2011-08-01-thumbnail-me-vignettez-a-linfini.md  2011-08-04-mkvmerge-remuxer-une-saison-a-la-volee.md  2011-08-09-obfusquer-votre-adresse-mail-et-echapper-aux-spam.md  2011-09-26-exploiter-les-logs-currentwidget-de-votre-android.md  2012-01-27-fablab-a-telecom-bretagne-retour-dexperience.md  2012-01-30-photocatch-declenchement-automatise-dun-appareil-photo-d90-a-partir-dun-capteur-de-mouvements-et-dun-arduino.md  2012-03-12-thumbnail-me-3-0-released.md  2012-04-07-paris-timelapse-experiment.md  2012-04-30-save-time-and-energy-with-uml-diagram-generator-tools-online.md  2012-07-11-reactiver-la-data-apres-remplacement-de-votre-carte-sim-virgin-mobile.md  2012-07-12-how-to-install-microsoft-sql-server-odbc-driver-1-0-for-linux.md  2012-07-18-windows-management-instrumentation-wmi-linux-client.md  2012-08-22-onefeat-startup-experience-lets-go.md  2013-04-04-mac-os-x-widget-for-airbrake-io-api.md  2013-06-26-activity-transition-animations-like-the-vine-android-application.md  2013-11-01-custom-ios7-uialertview.md  2013-11-15-using-tttattributedlabel-with-regex-welcome-tttregexattributedlabel.md  2013-12-23-migration-from-wordpress-to-octopress.md  2014-01-06-twitter-mention-to-url-convertor-plugin-for-octopress.md  (+24 more)
docs/: CNAME  atom.xml  index.html  robots.txt  sitemap.xml
layouts/: baseof.html  robots.txt
plugins/: category_generator.rb  email.rb  twitter_mention_convertor.rb  twitter_text.rb  video-embed.rb
sass/: screen.scss
script/: setup
scripts/: check_links.py  generate_covers.py  migrate_posts.py  new_post.py
static/: CNAME  llms.txt
(+139 files in other folders)
