[project]
name = "blog-quent-in"
version = "0.1.0"
description = "Scripts for blog.quent.in Hugo site"
requires-python = ">=3.13"
dependencies = [
    "google-genai",
    "pillow",
    "python-frontmatter",
    "requests",
]

[project.scripts]
new-post = "scripts.new_post:main"
generate-covers = "scripts.generate_covers:main"
check-links = "scripts.check_links:main"

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]
